[package]
name = "tues-rs"
version = "0.1.0"
authors = ["Michael van Bracht <michael@wontfix.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.8"
rpassword = "5.0"
rustop = "1.1.0"
filedescriptor = "0.7.3"
subprocess = "0.2.6"
whoami = "0.1.0"
scoped_threadpool = "0.1.9"
crossterm_cursor = "0.4.0"
